# flags-and-star-VazMF

./: comoros_flag.py  cuba_flag.py  pyproject.toml  star.py  utils.py
