[tool.poetry]
name = "flags-and-star-vazmf"
version = "0.1.0"
description = ""
authors = ["VazMF <vazfernandam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
